<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="@dimen/_250sdp"
    android:maxHeight="1000dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:fillViewport="true"
    tools:context=".ui.beranda.transaksi.DetailHistoriTransaksiDialog">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        app:cardPreventCornerOverlap="false"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MaterialCardView.Cut">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_31sdp"
            android:background="@color/white"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:visibility="visible"
            android:text="@string/detail_transaksi"
            style="@style/MediumTextStyle"
            android:textAlignment="center"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/white"
            android:gravity="center"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_36sdp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llBarcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="top"
                    app:boxBackgroundColor="@color/white"
                    app:boxBackgroundMode="outline"
                    app:boxStrokeColor="@drawable/edittext_stroke_selector"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etBar"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_55sdp"
                        android:textColor="@color/orange"
                        style="@style/RegularTextStyle"
                        android:textSize="@dimen/_13ssp"
                        android:inputType="number"
                        android:hint="Barcode"
                        android:gravity="top"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_64sdp"
                    android:layout_weight="2"
                    android:layout_marginEnd="8dp"
                    app:cornerRadius="10dp"
                    android:textSize="@dimen/_14ssp"
                    android:includeFontPadding="false"
                    android:text="@string/scan"
                    android:layout_gravity="center"/>


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">





            </androidx.appcompat.widget.LinearLayoutCompat>
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:columnCount="2">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="@dimen/_75sdp"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_11ssp"
                    style="@style/MediumTextStyle"
                    android:text="@string/tanggal"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tanggal"
                    android:layout_columnWeight="1"
                    android:text="Minggu, 18 Desember 2022 11:20"
                    style="@style/MediumTextStyle"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/orange"
                    android:gravity="start"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="@dimen/_75sdp"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_11ssp"
                    style="@style/MediumTextStyle"
                    android:text="@string/invoice"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/invoice"
                    android:layout_columnWeight="1"
                    android:text="CTK7991001095"
                    style="@style/MediumTextStyle"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/orange"
                    android:gravity="start"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="@dimen/_75sdp"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_11ssp"
                    style="@style/MediumTextStyle"
                    android:text="@string/sub_total"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/subTotal"
                    android:layout_columnWeight="1"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_11ssp"
                    android:gravity="start|center_vertical"
                    style="@style/MediumTextStyle"
                    android:text="@string/total_arg2"/>



                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="@dimen/_75sdp"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_11ssp"
                    style="@style/MediumTextStyle"
                    android:text="@string/diskon"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/diskon"
                    android:layout_columnWeight="1"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_11ssp"
                    android:gravity="start|center_vertical"
                    style="@style/MediumTextStyle"
                    android:text="@string/produk_dibeli_arg"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="@dimen/_75sdp"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_11ssp"
                    style="@style/MediumTextStyle"
                    android:text="@string/total"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/total"
                    android:layout_columnWeight="1"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_11ssp"
                    android:gravity="start|center_vertical"
                    style="@style/MediumTextStyle"
                    android:text="@string/total_arg2"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="@dimen/_75sdp"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_11ssp"
                    style="@style/MediumTextStyle"
                    android:text="@string/bayar"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/bayar"
                    android:layout_columnWeight="1"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_11ssp"
                    android:gravity="start|center_vertical"
                    style="@style/MediumTextStyle"
                    android:text="@string/total_arg2"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="@dimen/_75sdp"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_11ssp"
                    style="@style/MediumTextStyle"
                    android:text="@string/kembalian"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/kembalian"
                    android:layout_columnWeight="1"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_11ssp"
                    android:gravity="start|center_vertical"
                    style="@style/MediumTextStyle"
                    android:text="@string/total_arg2"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="@dimen/_75sdp"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_11ssp"
                    style="@style/MediumTextStyle"
                    android:text="@string/catatan"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/catatan"
                    android:layout_columnWeight="1"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_11ssp"
                    android:gravity="start|center_vertical"
                    style="@style/MediumTextStyle"
                    android:text="@string/total_arg2"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="@dimen/_75sdp"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_11ssp"
                    style="@style/MediumTextStyle"
                    android:text="@string/produk_dibeli"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/produkDibeli"
                    android:layout_columnWeight="1"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_11ssp"
                    android:gravity="start|center_vertical"
                    style="@style/MediumTextStyle"
                    android:text="@string/produk_dibeli_arg"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="@dimen/_75sdp"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_11ssp"
                    style="@style/MediumTextStyle"
                    android:text="@string/pembayaran"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/pembayaran"
                    android:layout_columnWeight="1"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_11ssp"
                    android:gravity="start|center_vertical"
                    style="@style/MediumTextStyle"
                    android:text="@string/produk_dibeli_arg"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="@dimen/_75sdp"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_11ssp"
                    style="@style/MediumTextStyle"
                    android:text="@string/status_bayar"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/status"
                    android:layout_columnWeight="1"
                    android:textColor="@color/green"
                    android:textSize="@dimen/_11ssp"
                    android:gravity="start|center_vertical"
                    style="@style/MediumTextStyle"
                    android:text="@string/produk_dibeli_arg"/>

            </GridLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>
</ScrollView>
