<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical"
    tools:context=".ui.pengaturan.EditNamaDialog">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:hint="@string/edit_nama_toko"
        app:expandedHintEnabled="false"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@drawable/edittext_stroke_selector"
        android:textColorHint="@color/orange"
        app:hintTextColor="@color/orange"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNamaToko"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_55sdp"
            android:textColor="@color/orange"
            style="@style/RegularTextStyle"
            android:textSize="@dimen/_13ssp"
            android:inputType="text"
            android:gravity="top" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/negativeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="0dp"
            android:text="@string/batal"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/orange"
            android:background="?android:attr/selectableItemBackground"
            android:backgroundTint="@android:color/transparent"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/positiveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="0dp"
            android:text="@string/ok"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/orange"
            android:background="?android:attr/selectableItemBackground"
            android:backgroundTint="@android:color/transparent"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>